# lab-3-4

./: Dockerfile  Makefile  README.md  compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
asi_labs/lab3/: dataset.py  learn.py
asi_labs/lab3/templates/: report.html
asi_labs/lab4/: Task.md  api.py
assets/report-copy/: CollegeDistance.html  report.html
