[tool.poetry]
name = "asi"
version = "0.1.0"
description = ""
authors = ["Aleksandra Indulska <s24477@pjwstk.edu.pl>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.10"
pycaret = {extras = ["full"], version = "^3.3.2"}
kaleido = "0.2.1"
jinja2 = "^3.1.4"
pdfkit = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
