[tool.poetry]
name = "asi"
version = "0.1.0"
description = ""
authors = ["Aleksandra Indulska <s24477@pjwstk.edu.pl>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.10"
pycaret = "^3.3.2"
kaleido = "0.2.1"
jinja2 = "^3.1.4"
pdfkit = "^1.0.0"

[tool.poetry.group.learning.dependencies]
pycaret = { extras = ["analysis", "tuner", "parallel"], version = "^3.3.2" }

[tool.poetry.group.api.dependencies]
fastapi = { extras = ["standard"], version = "^0.115.4" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
